# Cortex

./: .gitignore  AI-201-PROGRESS.md  COMPLETE_SESSION_SUMMARY_2025-12-04.md  CORTEX_CONTEXT_EXAMPLE.md  CORTEX_FEATURE_PROMPTS.md  CORTEX_VSCODE_CLAUDE_IMPLEMENTATION_PLAN.md  CX-003-SUMMARY.md  CX-004-SUMMARY.md  CX-005-SUMMARY.md  CX-007-SUMMARY.md  CX-008-SUMMARY.md  CX-010-SUMMARY.md  CX-011-SUMMARY.md  DOCUMENTATION.md  DUE_DILIGENCE_REPORT.md  FIXES_COMPLETED_2025-12-04.md  PERFORMANCE.md  PERFORMANCE_TEST_PLAN.md  PHASE-1-SUMMARY.md  PHASE-2-FINAL-SUMMARY.md  PHASE-2-SESSION-SUMMARY.md  PHASE-2-SUMMARY.md  README.md  SESSION_SUMMARY_2025-12-04.md  SETUP.md  STATUS.md  TESTING.md  TEST_FIXES_SESSION_2025-12-04.md  UI-IMPLEMENTATION-LOG.md  VSCODE_CLAUDE_EXPORT_IMPLEMENTATION_COMPLETE.md  VSCODE_EXPORT_COMPLETE.md  cortex-claude-context.md  install-deps.sh  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: todo.md
docs/: API_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/sessions/: RUNTIME_TEST_FIXES_2025-12-04.md
scripts/: test_export_performance.sh
src/: app.css
src-tauri/: Cargo.toml  splash.html  tauri.conf.json
src-tauri/benches/: README.md  db_benchmark.rs  export_benchmark.rs  indexing_benchmark.rs  load_test.rs  search_benchmark.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: embeddings.rs  mod.rs  model_downloader.rs  similarity.rs
src-tauri/src/commands/: ai_commands.rs  export.rs  indexing.rs  mod.rs  search.rs
src-tauri/src/db/: mod.rs  operations.rs  schema.rs
src-tauri/src/export/: bundler.rs  context_builder.rs  mod.rs  path_validator.rs  prompt_builder.rs  rake_exporter.rs
src-tauri/src/indexer/: mod.rs  scanner.rs  types.rs  watcher.rs
src-tauri/src/indexer/extractors/: docx.rs  markdown.rs  mod.rs  pdf.rs  text.rs
src-tauri/src/search/: fts.rs  mod.rs
src-tauri/tests/: commands_test.rs.disabled  db_tests.rs  extraction_test.rs  integration_test.rs  search_commands_test.rs.disabled
(+14 files in other folders)
